--- a/locales/nl.json
+++ b/locales/nl.json
@@ -94,6 +94,7 @@
     "Close":"Sluiten",
     "Other":"Andere",
     "Buy or Renew a Subscription": "Koop of verleng je abonnement",
+	"Subscription":"Abonnement",
     "It looks like you do not have a valid subscription to this tool yet":"Het lijkt er op dat je nog geen abonnement hebt voor deze tool",
     "It looks like your subscription has expired on":"Het lijkt er op dat je abonnement vervallen is op",
     "Your subscription is still valid until":"Je abonnement is nog geldig to",
@@ -101,9 +102,9 @@
     "Renew":"Vernieuwen",
     "Subscription valid until":"Abonnement geldig tot",
     "Alerts":"Alarmen",
-    "ALL Monsters Cleaning":"ALLE Pokémon opruimen",
-    "ALL Raid/Egg Cleaning":"ALLE Raids/Eieren opruimen",
-    "ALL Quests Cleaning":"ALLE quests opruimen",
+    "ALL Monsters Cleaning":"Alle Pokémon opruimen",
+    "ALL Raid/Egg Cleaning":"Alle Raids/Eieren opruimen",
+    "ALL Quests Cleaning":"Alle quests opruimen",
     "Your Location is not set and cannot be set here!":"Je locatie is nog niet ingesteld en kan hier niet ingesteld worden",
     "Your Location is set to":"Je locatie is ingesteld op",
     "You have not set any area yet!": "Je hebt nog geen actieve zones",
@@ -155,7 +156,7 @@
     "Successfully Updated Distance on ALL Quests":"Afstand alle quests succesvol bijgewerkt",
     "UPDATE":"BIJWERKEN",
     "UPDATE DISTANCE":"BIJWERKEN AFSTAND",
-    "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Je hebt nog geen alarm ingesteld voor ALLE Pokemon, selecteer een generatie aub!",
+    "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Je hebt geen alarm ingesteld voor alle Pokemons, selecteer een generatie aub!",
     "You have not set any Alarm yet!":"Je hebt nog geen alarm ingesteld!",
     "You have not set any Alarms for this Generation!":"Je hebt nog geen alarm ingesteld voor deze generatie!",
     "User & Channel Management":"Gebruiker en kanaal onderhoud",
@@ -194,7 +195,7 @@
     "Delete ALL Invasions?":"Verwijder ALLE Invasies?",
     "This will delete all your Invasions Alarms and cannot be undone":"Dit verwijderd alle ingestelde invasies en kan niet terug gedraaid worden",
     "Update Distance for all tracked Invasions?":"Aanpassen afstand voor alle Invasies die je volgt?",
-    "This will update Distance settings for ALL tracked Invasions":"Hiermee pas je de afstand aan voor ALLE Invasies die je volgt",
+    "This will update Distance settings for ALL tracked Invasions":"Hiermee pas je de afstand aan voor alle Invasies die je volgt",
     "ALL Invasions Cleaning":"ALLE Invasies opschonen?",
     "NEW INVASIONS ALARM":"NIEUW INVASIE ALARM",
     "INVASIONS TRACKED":"INGESTELDE INVASIES",
@@ -218,5 +219,94 @@
     "grass":"gras",
     "flying":"vliegend",
     "dragon":"draak",
-    "everything":"alles"
+    "everything":"alles",
+	"Configured Distance:":"Geconfigureerde afstand:",
+    "Distance Display":"visualiseren afstand",
+    "meters around your position":"meters rond je positie",
+    "Areas":"gebieden",
+    "Use Areas":"gebruikte gebieden",
+    "Set Distance":"definieer afstand",
+    "Some of your alarms contains both IV and PvP Filters":"Sommige alarmen bevatten zowel IV als PvP filters",
+    "Some of your alarms contains both PvP Great and PvP Ultra Filters":"Sommige alarmen bevatten zowel PvP Great als PvP Ultra filters",
+    "Alarms will only be triggered if ALL Filters are met":"Alarmen worden alleen gegenereed als aan filter instellingen voldaan wordt",
+    "Delete":"verwijder",
+    "Location deleted successfully":"locatie succesvol verwijderd",
+    "All your distance settings have been reset":"Al je afstand instellingen zijn gereset",
+    "Delete Location and Distance Settings":"Verwijder locatie en afstand instellingen",
+    "This will delete your location AND all your distance settings":"Dit verwijderd je locatie en alle afstand instellingen",
+    "Switch Profile":"profiel wisselen",
+    "Create New Profile":"maak een nieuw profiel",
+    "Active Profile is shown in green below":"Profiel welke actief is staat hieronder in het groen weergegeven",
+    "Choose Profile to view or activate":"Kies profiel om te bekijken of te activeren",
+    "Successfully Updated Active Profile":"Actief profiel is succesvol bijgewerkt",
+    "Successfully Switched Profile View":"Het wisselen van profiel bekijken is succesvol",
+    "View":"Bekijk",
+    "Activate":"Activeer",
+    "Create Profile":"Maak een profiel",
+    "Choose the name of your new Profile":"Kies de naam van je nieuwe profiel",
+    "Please Name default Profile":"Geef je standaard profiel (default) een naam",
+    "Validate":"Valideer",
+    "Active":"Actief",
+    "Not Active":"Niet actief",
+    "Default Profile":"Standaard profiel",
+    "Rename Profile":"Geef je profiel een andere naam",
+    "Choose a New Profile Name":"Kies een nieuwe profiel naam",
+    "Lures":"Lure",
+    "LURES":"Lure",
+    "Normal Lure":"Normale lure",
+    "Glacial Lure":"Glacial lure",
+    "Mossy Lure":"Mossy lure",
+    "Magnetic Lure":"Magnetic lure",
+    "Rainy Lure":"Rainy lure",
+    "Delete tracking for Lures":"verwijder volgen van lures",
+    "This will delete tracking for Lure":"Verwijderen van het volgen van lures",
+    "Update Distance for all tracked Lures?":"Update afstand voor alle gevolgde lures",
+    "This will update Distance settings for ALL tracked Lures":"Update instellingen voor ALLE gevolgde lures",
+    "Delete ALL tracked Lures?":"Verwijder ALLE gevolgde lures",
+    "This will delete all your Lures Alarms and cannot be undone":"Dit verwijdert al jou lures meldingen en kan niet ongedaan gemaakt worden",
+    "ACTIVATE CLEANING ON ALL":"activeer verwijder melding",
+    "Monsters":"Pokemons",
+    "Raid/Egg":"Raid/Egg",
+    "Quests":"Quests",
+    "Invasions":"Invasies",
+    "Lures":"Lures",
+    "LURES TRACKED":"Gevonden lures",
+    "Successfully Added Invasion Alarm(s)":"Aanpassen invasie alarm is gelukt",
+    "Successfully Updated Invasion Alarm":"Invasie alarm is succesvol bijgewerkt",
+    "Successfully Deleted Invasion Alarm(s)":"Verwijderde invasie alarm is gelukt",
+    "Successfully Updated Distance on ALL Invasions":"Afstand op alle invasie alarmen is bijgewerkt",
+    "Successfully Added Lure Alarm(s)":"Lure alarm succesvol aangepast",
+    "Successfully Updated Lure Alarm":"Lure alarm succesvol bijgewerkt ",
+    "Successfully Deleted Lure Alarm(s)":"Verwijderde lure alarm is gelukt",
+    "Successfully Updated Distance on ALL Lures":"Bijgewerkte afstand op alle lures is gelukt",
+    "Successfully Created Profile":"Het maken van een profiel is gelukt",
+    "Successfully Renamed Profile":"Profiel hernoemen is gelukt",
+    "Successfully Deleted Profile":"Profiel verwijderen is gelukt",
+    "Delete ALL Lures?":"Verwijder alle lures",
+    "NEW LURES ALARM":"Nieuwe lure melding",
+    "ALL LURES":"Alle lures",
+    "Profile":"Profiel",
+    "Default":"Standaard (default)",
+    "Delete Profile":"Verwijder profiel",
+    "You currently don't have any profile configured":"Op het moment heb je nog geen profiel gemaakt",
+    "This will delete this Profile":"Dit verwijderd dit profiel",
+    "AND ALL ASSOCIATED TRACKINGS":"EN ALLE BIJBEHORENDE ALARMEN",
+    "Duplicate - This Alarm already exist":"Dubbel - dit alarm bestaat al",
+    "Your account has been disabled on":"Uw account is uitgeschakeld op",
+    "Your account has been disabled by an admin":"Uw account is uitgeschakeld door een admin",
+    "Please contact an admin!":"Neem contact op met een admin!",
+    "Admin Tools":"Administratie tools",
+    "Cleaning":"Opruimen",
+    "Trackings":"Alarmen",
+    "Profiles":"Profielen",
+    "Areas & Location":"Gebieden en locatie",
+    "You have configured":"Je hebtg econfigureerd",
+    "area(s)":"gebied(en)",
+    "SET TO GPS LOCATION":"Ingesteld op GPS locatie",
+    "EDIT":"Wijzig",
+    "SCHEDULE":"Schema",
+    "RENAME":"Hernoem",
+    "SWITCH":"Wissel",
+    "Could not connect to the API":"Geen connectie met API",
+    "API returned a NOK Status":"API geeft aan NOK status"
 }
