--- a/locales/fr.json
+++ b/locales/fr.json
@@ -251,40 +251,40 @@
     "Default Profile":"Profil par Défaut",
     "Rename Profile":"Renommer un Profil",
     "Choose a New Profile Name":"Choisissez un nouveau Nom pour ce Profil",
-    "Lures":"Leures",
-    "LURES":"LEURES",
+    "Lures":"Leurres",
+    "LURES":"LEURRES",
     "Normal Lure":"Type Normal",
     "Glacial Lure":"Type Glacial",
     "Mossy Lure":"Type Moussu",
     "Magnetic Lure":"Type Magnetic",
     "Rainy Lure":"Type Pluvieux",
-    "Delete tracking for Lures":"Supprimer le suivi des Leures",
-    "This will delete tracking for Lure":"Cette action supprimera le suivi des Leures",
-    "Update Distance for all tracked Lures?":"Modifier la Distance pour tous les Leures suivis?",
-    "This will update Distance settings for ALL tracked Lures":"Cette action modifiera la distance de suivi pour TOUS les Leures",
-    "Delete ALL tracked Lures?":"Supprimer tous les Leures suivis",
-    "This will delete all your Lures Alarms and cannot be undone":"Cette action va supprimer toutes vos alarmes de Leures et ne peut pas être annulée",
+    "Delete tracking for Lures":"Supprimer le suivi des Leurres",
+    "This will delete tracking for Lure":"Cette action supprimera le suivi des Leurres",
+    "Update Distance for all tracked Lures?":"Modifier la Distance pour tous les Leurres suivis?",
+    "This will update Distance settings for ALL tracked Lures":"Cette action modifiera la distance de suivi pour TOUS les Leurres",
+    "Delete ALL tracked Lures?":"Supprimer tous les Leurres suivis",
+    "This will delete all your Lures Alarms and cannot be undone":"Cette action va supprimer toutes vos alarmes de Leurres et ne peut pas être annulée",
     "ACTIVATE CLEANING ON ALL":"ACTIVER LE CLEANING SUR TOUS",
     "Monsters":"Pokémon",
     "Raid/Egg":"Raids/Oeufs",
     "Quests":"Quêtes",
     "Invasions":"Invasions",
-    "Lures":"Leures",
-    "LURES TRACKED":"LEURES SUIVIS",
+    "Lures":"Leurres",
+    "LURES TRACKED":"LEURRES SUIVIS",
     "Successfully Added Invasion Alarm(s)":"Alarme d'Invasion ajoutée avec succès",
     "Successfully Updated Invasion Alarm":"La liste des Invasions à été mise à jour",
     "Successfully Deleted Invasion Alarm(s)":"Alarme Invasion supprimée avec succès",
     "Successfully Updated Distance on ALL Invasions":"Distance Mise à Jour avec Succès pour TOUTES les Invasions",
-    "Successfully Added Lure Alarm(s)":"Alarme de Leure ajoutée avec succès",
-    "Successfully Updated Lure Alarm":"La liste de Leures à été mise à jour",
-    "Successfully Deleted Lure Alarm(s)":"Alarme de Leure supprimée avec succès",
-    "Successfully Updated Distance on ALL Lures":"Distance Mise à Jour avec Succès pour TOUS les Leures",
+    "Successfully Added Lure Alarm(s)":"Alarme de Leurre ajoutée avec succès",
+    "Successfully Updated Lure Alarm":"La liste de Leurres à été mise à jour",
+    "Successfully Deleted Lure Alarm(s)":"Alarme de Leurre supprimée avec succès",
+    "Successfully Updated Distance on ALL Lures":"Distance Mise à Jour avec Succès pour TOUS les Leurres",
     "Successfully Created Profile":"Profil créé avec succès",
     "Successfully Renamed Profile":"Profil Renommé avec succès",
     "Successfully Deleted Profile":"Profil Supprimé avec succès",
-    "Delete ALL Lures?":"Supprimer TOUS les Leures suivis",
-    "NEW LURES ALARM":"NOUVELLE ALARME DE LEURE",
-    "ALL LURES":"TOUS LES LEURES",
+    "Delete ALL Lures?":"Supprimer TOUS les Leurres suivis",
+    "NEW LURES ALARM":"NOUVELLE ALARME DE LEURRE",
+    "ALL LURES":"TOUS LES LEURRES",
     "Profile":"Profil",
     "Default":"Défaut",
     "Delete Profile":"Supprimer le Profil",
