Add Delegated Administration

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -159,7 +159,8 @@
     "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Vous n'avez configuré aucune Alarme pour TOUS les Pokémon. Sélectionnez une Génération!",
     "You have not set any Alarm yet!":"Vous n'avez encore configuré aucune Alarme!",
     "You have not set any Alarms for this Generation!":"Vous n'avez configuré aucune Alarme pour cette génération!",
-    "User & Channel Management":"Gestion Utilisateurs et Canaux",
+    "Users Management":"Gestion des Utilisateurs",
+    "Channels Management":"Gestion des Canaux",
     "Back to own Account":"Retour à mon compte personnel",
     "Discord or Telegram ID":"ID Discord ou Telegram",
     "ADMIN MODE ACTIVE":"MODE ADMIN ACTIF",
