Some Locale changes

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -160,7 +160,7 @@
     "You have not set any Alarm yet!":"Vous n'avez encore configuré aucune Alarme!",
     "You have not set any Alarms for this Generation!":"Vous n'avez configuré aucune Alarme pour cette génération!",
     "Users Management":"Gestion des Utilisateurs",
-    "Channels Management":"Gestion des Canaux",
+    "Channel Management":"Gestion des Canaux",
     "Back to own Account":"Retour à mon compte personnel",
     "Discord or Telegram ID":"ID Discord ou Telegram",
     "ADMIN MODE ACTIVE":"MODE ADMIN ACTIF",
