--- a/locales/de.json
+++ b/locales/de.json
@@ -9,7 +9,7 @@
    "Cleaning activated on":"Bereinigen aktiviert bei",
    "command":"Befehl",
    "CP":"WP",
-   "DELETE":"LÖSCHEN",
+   "DELETE":"LÖSCHE",
    "DELETE ALL":"ALLE LÖSCHEN",
    "DISTANCE":"DISTANZ",
    "Eggs":"Eier",
@@ -290,5 +290,30 @@
    "Delete Profile":"Profil löschen",
    "You currently don't have any profile configured":"Du hast momentan kein Profil eingestellt",
    "This will delete this Profile":"Dadurch wird dieses Profil gelöscht",
-   "AND ALL ASSOCIATED TRACKINGS":"UND ALLE DAMIT VERBUNDENEN EINSTELLUNGEN"
+   "AND ALL ASSOCIATED TRACKINGS":"UND ALLE DAMIT VERBUNDENEN EINSTELLUNGEN",
+   "You have configured":"Ausgewählt:",
+   "area(s)":"Gebiet(e)",
+   "Nests":"Nester",
+   "NESTS":"NESTER",
+   "Trackings":"Filter",
+   "Areas & Location":"Gebiete & Standort",
+   "Profiles":"Profile",
+   "Channel & Users":"Channel & Mitglieder",
+   "You have not set any Alarm yet!":"Du hast bisher nichts eingestellt",
+   "Rainy Lure":"Regen",
+   "NESTS TRACKED":"NEST-EINSTELLUNGEN",
+   "NEW NESTS ALARM":"NEUE NEST-EINSTELLUNG",
+   "Spawns/Hour":"Spawns/Stunde",
+   "Delete tracking for Nests":"Lösche Nest-Einstellung",
+   "This will delete trackign for Nest":"Dies wird die Einstellungen für folgendes Nest löschen",
+   "Delete ALL Nests?":"ALLE Nester löschen?",
+   "This will delete all your Nests Alarms and cannot be undone":"Damit werden alle eingestellten Nester unwiderruflich gelöscht.",
+   "RENAME":"UMBENENNEN",
+   "SWITCH":"WECHSELN",
+   "ALL NESTS":"ALLE NESTER",
+   "Update Distance for all tracked Nests?":"Möchstest du die Distanz für alle Nester aktualisieren?",
+   "This will update Distance settings for ALL tracked Nests":"Dadurch werden die Distanzeinstellungen für ALLE Nester aktualisiert",
+   "SET TO GPS LOCATION":"AKTUELLEN GPS STANDORT VERWENDEN",
+   "EDIT":"BEARBEITE",
+   "Cleaning":"Bereinigen"
 }
