more crappy Dutch

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -97,7 +97,7 @@
 	"Subscription":"Abonnement",
     "It looks like you do not have a valid subscription to this tool yet":"Het lijkt er op dat je nog geen abonnement hebt voor deze tool",
     "It looks like your subscription has expired on":"Het lijkt er op dat je abonnement vervallen is op",
-    "Your subscription is still valid until":"Je abonnement is nog geldig to",
+    "Your subscription is still valid until":"Je abonnement is nog geldig tot",
     "Back to":"Terug naar",
     "Renew":"Vernieuwen",
     "Subscription valid until":"Abonnement geldig tot",
@@ -159,7 +159,8 @@
     "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Je hebt geen alarm ingesteld voor alle Pokemons, selecteer een generatie aub!",
     "You have not set any Alarm yet!":"Je hebt nog geen alarm ingesteld!",
     "You have not set any Alarms for this Generation!":"Je hebt nog geen alarm ingesteld voor deze generatie!",
-    "User & Channel Management":"Gebruiker en kanaal onderhoud",
+    "Users Management":"Gebruiker onderhoud",
+    "Channel Management":"Kanaal onderhoud",	
     "Back to own Account":"Terug naar eigen account",
     "Discord or Telegram ID":"Dicord of Telegram ID",
     "ADMIN MODE ACTIVE":"Beheerder modus actief",
@@ -308,5 +309,51 @@
     "RENAME":"Hernoem",
     "SWITCH":"Wissel",
     "Could not connect to the API":"Geen connectie met API",
-    "API returned a NOK Status":"API geeft aan NOK status"
+    "API returned a NOK Status":"API geeft aan NOK status",
+    "Nests":"Nesten",
+    "NESTS":"NESTEN",
+    "Delete tracking for Nests":"Verwijder gevolgde Nesten",
+    "This will delete tracking for Nest":"Dit verwijderd de gevolgde nesten",
+    "Update Distance for all tracked Nests?":"Afstand bijwerken voor alle gevolgde nesten?",
+    "This will update Distance settings for ALL tracked Nests":"Hiermee pas je de afstand aan voor ALLE gevolgde nesten",
+    "Delete ALL tracked Nests?":"Verwijder ALLE gevolgde nesten?",
+    "This will delete all your Nests Alarms and cannot be undone":"Hiermee verwijder je alle gevolgde nesten en kan niet meer ongedaan gemaakt worden",
+    "NESTS TRACKED":"GEVOLGDE NESTEN",
+    "Successfully Added Nest Alarm(s)":"Nest alarmen succesvol toegevoegd",
+    "Successfully Updated Nest Alarm":"Nest alarmen succesvol bijgewerkt",
+    "Successfully Deleted Nest Alarm(s)":"Nest alarmen succesvol verwijderd",
+    "Successfully Updated Distance on ALL Nests":"Afstand voor gevolgde nesten succesvol bijgewerkt",
+    "Delete ALL Nests?":"Verwijder ALLE nesten?",
+    "NEW NESTS ALARM":"NIEUW NEST ALARM",
+    "ALL NESTS":"ALLE NESTEN",
+    "Spawns/Hour":"Pokemon/Uur",
+	"No Settings Found in DB. Settings have been pulled from config.php":"Geen instellingen gevonden in DB. Instellingen overgenomen van config.php",
+    "Please check your settings and Save to migrate to DB":"Controleer je instellingen en sla deze op voor de migratie naar DB",
+    "Following Settings have been migrated and should be removed from config.php":"Deze instellingen zijn overgezet en moeten verwijderd worden uit config.php",
+    "Unable to Connect to Poracle DB":"Niet gelukt verbinding te maken met Poracle DB",
+    "Successfully Connected to Poracle DB":"Succesvol verbonden met Poracle DB",
+    "Unable to Connect to Scanner DB":"Niet gelukt verbindingte makenmet scanner DB",
+    "Successfully Connected to Scanner DB":"Succesvol verbonden met scanner DB",
+    "Unable to Connect to Poracle API":"Niet gelukt verbinding te maken met Poracle API",
+    "Successfully Connected to Poracle API":"Succesvol verbonden met Poracle API",
+    "To activate cache please perform following actions from your PoracleWeb root folder":"Om cache te activeren voer onderstaande uit in je PoracleWeb hoofdmap",
+    "Cache Folder found. Cache Active:":"Cahche map gevonden. Cache actief",
+    "Languages":"Talen",
+    "DB Type":"DB type",
+    "Password":"Wachtwoord",
+    "Enable Telegram Login ?":"Activeren Telegram login?",
+    "BOT Name":"BOT naam",
+    "Enable Menu Items":"Activeer menu items",
+    "Location":"Locatie",
+    "Additional Settings":"Overige instellingen",
+    "Enable Debug Mode":"Activeer foutopsporingsmodus",
+    "Enable User List in Admin Tools":"Activeer gebruikerslijst in Admin Tools",
+    "Site is running HTTPS":"Site is HTTPS",
+    "Additional Pages":"Overige paginas",
+    "Add a custom Page by giving its Name, URL and an icon":"Voeg persoonlijke pagina toe door de naam, link en icoon toe te voegen",
+    "Chose Any Free Icon from":"Kies een gratis icoon uit",
+    "Name":"Naam",
+    "Icon":"Icoon",
+    "Channels & Users":"Kanalen en Gebruikers",
+    "Server Settings":"Server instellingen"
 }
