Max Distance 0 should be unlimited

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -361,5 +361,6 @@
     "Server Default Locale":"Langue du Serveur",
     "Nominatim Settings":"Paramètres Nominatim",
     "PvP Settings":"Paramètres PvP",
-    "Poracle Admins":"Administrateurs Poracle"
+    "Poracle Admins":"Administrateurs Poracle",
+    "Unlimited":"Illimité"
 }
