PvP defaults to blank

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -362,5 +362,7 @@
     "Nominatim Settings":"Paramètres Nominatim",
     "PvP Settings":"Paramètres PvP",
     "Poracle Admins":"Administrateurs Poracle",
-    "Unlimited":"Illimité"
+    "Unlimited":"Illimité",
+    "Only fill this section if you want to track PvP":"Remplir cette section uniquement pour ajouter un suivi PvP",
+    "Ranking should be between 1 and":"Le Ranking doit être compris entre 1 et"
 }
