--- a/locales/nl.json
+++ b/locales/nl.json
@@ -3,7 +3,7 @@
     "ALL":"ALLE",
     "ALL Monsters":"ALLE POKEMON",
     "ALL Quests":"ALLE QUESTS",
-    "ALL Raids/Eggs":"ALLE RAIDS EN EIEREN",
+    "ALL Raids/Eggs":"ALLE Raids en Eieren",
     "CANCEL":"ANNULEREN",
     "Cleaning Activated":"Opruimen actief",
     "Cleaning activated on":"Opruimen geactiveerd op<br>",
@@ -12,8 +12,8 @@
     "DELETE":"VERWIJDEREN",
     "DELETE ALL":"DELETE ALLES",
     "DISTANCE":"AFSTAND",
-    "Eggs":"EIEREN",
-    "Eggs Level":"EIEREN TIER",
+    "Eggs":"Eieren",
+    "Eggs Level":"Eieren Tier",
     "Error":"Fout",
     "GREAT":"GREAT",
     "IV":"IV",
