Better Handling of Default Values

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -364,5 +364,6 @@
     "Poracle Admins":"Administrateurs Poracle",
     "Unlimited":"Illimité",
     "Only fill this section if you want to track PvP":"Remplir cette section uniquement pour ajouter un suivi PvP",
-    "Ranking should be between 1 and":"Le Ranking doit être compris entre 1 et"
+    "Ranking should be between 1 and":"Le Ranking doit être compris entre 1 et",
+    "Track Pokemon with no IV":"Suivre les Pokemon sans IV"
 }
