--- a/locales/fr.json
+++ b/locales/fr.json
@@ -365,7 +365,7 @@
     "Unlimited":"Illimité",
     "Only fill this section if you want to track PvP":"Remplir cette section uniquement pour ajouter un suivi PvP",
     "Ranking should be between 1 and":"Le Ranking doit être compris entre 1 et",
-    "Track Pokemon with no IV":"Suivre les Pokemon sans IV",
+    "Include Pokemon with unknown IV":"Inclure les Pokémon a IV Inconnue",
     "Track PvP League":"Suivi Ligue PvP",
     "None":"Aucune",
     "Great":"Super",
