Add Support for Candy

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -369,5 +369,7 @@
     "Track PvP League":"Suivi Ligue PvP",
     "None":"Aucune",
     "Great":"Super",
-    "Ultra":"Ultra"
+    "Ultra":"Ultra",
+    "Select Candy Rewards you want to add":"Sélectionnez les types de Bonbons à ajouter",
+    "Candy":"Bonbon"
 }
