Update Swedish Locale

--- a/locales/se.json
+++ b/locales/se.json
@@ -148,6 +148,8 @@
 	"USERS LIST": "ANVÄNDARLISTA",
 	"DISCORD CHANNELS LIST": "DISCORD KANALER",
 	"TELEGRAM CHANNELS LIST": "TELEGRAM KANALLISTA",
+	"Users Management":"Användarhantering",
+	"Channel Management":"Kanalhantering",
 	"Migrate": "Migrera",
 	"Migrate Your Account": "Migrera ditt konto",
 	"You are currently connected as": "Du är för närvarande inloggad som",
@@ -258,5 +260,63 @@
 	"RENAME": "DÖP OM",
 	"SWITCH": "BYT",
 	"Could not connect to the API": "Kunde inte ansluta till API'n",
-	"API returned a NOK Status": "API'n returnerade en NOK Status"
+	"API returned a NOK Status": "API'n returnerade en NOK Status",
+        "Nests":"Nests",
+        "NESTS":"NESTS",
+        "Delete tracking for Nests":"Radera spårning av Nests",
+        "This will delete tracking for Nest":"Detta kommer radera spårningen av Nests",
+        "Update Distance for all tracked Nests?":"Uppdatera avstånd för alla spårade Nests?",
+        "This will update Distance settings for ALL tracked Nests":"Detta kommer att uppdatera avståndet för alla spårade Nests",
+        "Delete ALL tracked Nests?":"Radera ALLA spårade Nests?",
+        "This will delete all your Nests Alarms and cannot be undone":"Detta kommer radera alla dina Nest Alarm och kan inte ångras",
+        "NESTS TRACKED":"SPÅRADE NESTS",
+        "Successfully Added Nest Alarm(s)":"Nest Alarm tillagt",
+        "Successfully Updated Nest Alarm":"Nest Alarm uppdaterat",
+        "Successfully Deleted Nest Alarm(s)":"Nest Alarm raderat",
+        "Successfully Updated Distance on ALL Nests":"Uppdatera avstånd på ALLA Nests",
+        "Delete ALL Nests?":"Radera ALLA Nest?",
+        "NEW NESTS ALARM":"NYTT NEST ALARM",
+        "ALL NESTS":"ALLA NESTS",
+        "Spawns/Hour":"Spawns/Timme",
+        "No Settings Found in DB. Settings have been pulled from config.php":"Inga inställningar funna i DB. Inställningar har blivit hämtade från config.php",
+        "Please check your settings and Save to migrate to DB":"Kontrollera dina inställningar och Spara flr att migrera till DB",
+        "Following Settings have been migrated and should be removed from config.php":"Följande inställningar har migrerats och bör tas bort från config.php",
+        "Unable to Connect to Poracle DB":"Misslyckades med att ansluta till Poracle DB",
+        "Successfully Connected to Poracle DB":"Ansluten till Poracle DB",
+        "Unable to Connect to Scanner DB":"Misslyckades med att ansluta till Scanner DB",
+        "Successfully Connected to Scanner DB":"Ansluten till Scanner DB",
+        "Unable to Connect to Poracle API":"Misslyckades med att ansluta till Poracle API",
+        "Successfully Connected to Poracle API":"Ansluten till Poracle API",
+        "To activate cache please perform following actions from your PoracleWeb root folder":"För att aktivera cache, utför följande från din PoracleWeb root folder",
+        "Cache Folder found. Cache Active":"Cache Folder funnen. Cache Aktiverat",
+        "Languages":"Språk",
+        "DB Type":"DB typ",
+        "Password":"Lösenord",
+        "Enable Telegram Login ?":"Aktivera Telegram Login?",
+        "BOT Name":"BOT namn",
+        "Enable Menu Items":"Aktivera Menyobjekt",
+        "Location":"Plats",
+        "Additional Settings":"Övriga Inställningar",
+        "Enable Debug Mode":"Aktivera Debug läge",
+        "Enable User List in Admin Tools":"Aktivera Använderlista i Admin Verktyg",
+        "Site is running HTTPS":"Siten använder HTTPS",
+        "Additional Pages":"Övriga sidor",
+        "Add a custom Page by giving its Name, URL and an icon":"Lägg till en customsida genom att ge den ett namn, URL och en ikon",
+        "Chose Any Free Icon from":"Välj en gratisikon från",
+        "Name":"Namn",
+        "Icon":"Ikon",
+        "Channels & Users":"Kanaler och användare",
+        "Server Settings":"Serverinställningar",
+        "Settings pulled from Poracle API":"Inställningar hämtade från Poracle API",
+        "Update from Poracle config file":"Uppdatera från Poracles config fil",
+        "Server Default Locale":"Serverspråk",
+        "Nominatim Settings":"Nominatim Inställningar",
+        "PvP Settings":"PvP Inställningar",
+        "Poracle Admins":"Poracle Admins",
+        "Unlimited":"Obegränsad",
+        "Only fill this section if you want to track PvP":"Fyll endast i denna sektion om du vill spåra PvP",
+        "Ranking should be between 1 and":"Ranking bör vara mellan 1 och",
+        "Include Pokemon with unknown IV":"Inkludera Pokémon utan IV",
+        "Track PvP League":"Spåra PVP League",
+        "None":"Inga"
 }
