Update Gym Locale

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -373,5 +373,26 @@
     "Ultra":"Ultra",
     "Select Candy Rewards you want to add":"Sélectionnez les types de Bonbons à ajouter",
     "Candy":"Bonbon",
-    "Connect as a Telegram Admin to disable Discord Login":"Connectez-vous comme admin Telegram pour désactiver Discord"
+    "Connect as a Telegram Admin to disable Discord Login":"Connectez-vous comme admin Telegram pour désactiver Discord",
+        "Gyms":"Arènes",
+    "GYMS":"ARENES",
+    "Harmony":"Harmonie",
+    "Mystic":"Sagesse",
+    "Valor":"Bravoure",
+    "instinct":"Intuition",
+    "Delete tracking for Gyms":"Supprimer le suivi des Arènes",
+    "This will delete tracking for Gym":"Cette action supprimera le suivi des Arènes",
+    "Update Distance for all tracked Gyms?":"Modifier la Distance pour toutes les Arènes suivis?",
+    "This will update Distance settings for ALL tracked Gyms":"Cette action modifiera la distance de suivi pour TOUTES les Arènes",
+    "Delete ALL tracked Gyms?":"Supprimer toutes les Arènes suivis",
+    "This will delete all your Gyms Alarms and cannot be undone":"Cette action va supprimer toutes vos alarmes d'Arènes et ne peut pas être annulée",
+    "Gyms":"Arènes",
+    "GYMS TRACKED":"ARENES SUIVIS",
+    "Successfully Added Gym Alarm(s)":"Alarme d'Arène ajoutée avec succès",
+    "Successfully Updated Gym Alarm":"La liste d'Arènes à été mise à jour",
+    "Successfully Deleted Gym Alarm(s)":"Alarme d'Arène supprimée avec succès",
+    "Successfully Updated Distance on ALL Gyms":"Distance Mise à Jour avec Succès pour TOUTES les Arènes",
+    "Delete ALL Gyms?":"Supprimer TOUTES les Arènes suivis",
+    "NEW GYMS ALARM":"NOUVELLE ALARME D'ARENE",
+    "ALL GYMS":"TOUTES LES ARENES"
 }
