Update Show text

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -395,5 +395,6 @@
     "Delete ALL Gyms?":"Supprimer TOUTES les Arènes suivis",
     "NEW GYMS ALARM":"NOUVELLE ALARME D'ARENE",
     "ALL GYMS":"TOUTES LES ARENES",
-    "Alert on Slots Available":"Alerte si une place se libère"
+    "Alert on Slots Available":"Alerte si une place se libère",
+    "Slots Available":"Place Libre"
 }
