--- a/locales/fr.json
+++ b/locales/fr.json
@@ -396,5 +396,5 @@
     "NEW GYMS ALARM":"NOUVELLE ALARME D'ARENE",
     "ALL GYMS":"TOUTES LES ARENES",
     "Alert on Slots Available":"Alerte si une place se libère",
-    "Slots Available":"Place Libre"
+    "Slots Available":"Places Disponibles"
 }
