--- a/locales/fr.json
+++ b/locales/fr.json
@@ -398,5 +398,6 @@
     "Alert on Slots Available":"Alerte si une place se libère",
     "Slots Available":"Places Disponibles",
     "Enable Options":"Activer des Options",
-    "Select":"Sélectionner"
+    "Select":"Sélectionner",
+    "Icon Repository":"Choix des Icones"
 }
