Add Option for MiniMap on Select Screen

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -399,5 +399,7 @@
     "Slots Available":"Places Disponibles",
     "Enable Options":"Activer des Options",
     "Select":"Sélectionner",
-    "Icon Repository":"Choix des Icones"
+    "Icon Repository":"Choix des Icones",
+    "on display screen":"écran de visualisation",
+    "on select screen":"écran de sélection"
 }
