Allow Disabling admin_disable users

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -293,7 +293,7 @@
     "This will delete this Profile":"Cette action supprimera le profil en cours",
     "AND ALL ASSOCIATED TRACKINGS":"ET TOUS LES SUIVIS ASSOCIES",
     "Duplicate - This Alarm already exist":"Doublon - Cette Alarme existe déjà",
-    "Your account has been disabled on":"Votre compte a été désactivé le",
+    "Your account has been disabled":"Votre compte a été désactivé le",
     "Your account has been disabled by an admin":"Votre compte a été désactivé par l'administrateur",
     "Please contact an admin!":"Veuillez contacter un administrateur!",
     "Admin Tools":"Outils Administrateur",
@@ -401,5 +401,6 @@
     "Select":"Sélectionner",
     "Icon Repository":"Choix des Icones",
     "on display screen":"écran de visualisation",
-    "on select screen":"écran de sélection"
+    "on select screen":"écran de sélection",
+    "Allow 'Admin Disabled' Users":"Autoriser les utilisateurs 'Admin Disabled'"
 }
