--- a/locales/fr.json
+++ b/locales/fr.json
@@ -403,5 +403,7 @@
     "on display screen":"écran de visualisation",
     "on select screen":"écran de sélection",
     "Allow 'Admin Disabled' Users":"Autoriser les utilisateurs 'Admin Disabled'",
-    "Display Channel ID in Admin Tools":"Afficher l'ID du Channel (OA)"
+    "Display Channel ID in Admin Tools":"Afficher l'ID du Channel (OA)",
+    "Rank between":"Rank entre",
+    "and":"et"
 }
