Let User chose between JSON and DB for Raid Bosses

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -405,5 +405,6 @@
     "Allow 'Admin Disabled' Users":"Autoriser les utilisateurs 'Admin Disabled'",
     "Display Channel ID in Admin Tools":"Afficher l'ID du Channel (OA)",
     "Rank between":"Rank entre",
-    "and":"et"
+    "and":"et",
+    "Get Raid Bosses from":"Extraire les Boss de Raid de"
 }
