--- a/locales/fr.json
+++ b/locales/fr.json
@@ -406,5 +406,5 @@
     "Display Channel ID in Admin Tools":"Afficher l'ID du Channel (OA)",
     "Rank between":"Rank entre",
     "and":"et",
-    "Get Raid Bosses from":"Extraire les Boss de Raid de"
+    "Get Raid Bosses from":"Source des Boss de Raid"
 }
