--- a/locales/es.json
+++ b/locales/es.json
@@ -117,5 +117,74 @@
 	"this item": "este objeto",
 	"DELETE": "BORRAR",
 	"CP": "PC",
-	"GREAT": "SÚPER"
+	"GREAT": "SÚPER",
+	"You have configured": "Tienes configurada",
+	"area(s)": "área(s)",
+	"Monsters": "Monstruos",
+	"Raids": "Incursiones",
+	"Eggs": "Huevos",
+	"Quests": "Misiones",
+	"Invasions": "Invasiones",
+	"Lures": "Cebos",
+	"Nests": "Nidos",
+	"Gyms": "Gimnasios",
+	"Use Areas": "Usar áreas",
+	"Set Distance": "Configurar distancia",
+	"Include Pokemon with unknown IV": "Incluir Pokémon con IVs desconocidos",
+	"MAX": "MÁX",
+	"MIN": "MÍN",
+	"ATK": "ATQ",
+	"Only fill this section if you want to track PvP": "Rellena esta sección solo si quieres rastrear los PvPs",
+	"Track PvP League": "Liga",
+	"None": "Ninguna",
+	"Great": "Súper",
+	"Rank between": "Rango entre",
+	"and": "y",
+	"MIN CP": "PC MÍN",
+	"Ranking should be between 1 and": "El rango tiene que estar entre 1 y",
+	"Form": "Forma",
+	"Delete ALL tracked Mons?": "¿Borrar TODOS los monstruos en seguimiento?",
+	"This will delete all your Pokémon Alarms and cannot be undone, are you sure ?": "Esto borrará todas las notificaciones de Pokémon y no puede deshacerse, ¿estás seguro?",
+	"Delete ALL Raid/Eggs?": "¿Borrar TODAS las alarmas de incursiones y huevos?",
+	"This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?": "Esto borrará todas las notificaciones de incursiones y huevos y no puede deshacerse, ¿estás seguro?",
+	"You have not set any Alarm yet!": "¡Todavía no has configurado ninguna alarma!",
+	"Delete ALL Quests?": "¿Borrar TODAS las misiones?",
+	"This will delete all your Quests Alarms and cannot be undone, are you sure ?": "Esto borrará todas las notificaciones de misiones y no puede deshacerse, ¿estás seguro?",
+	"Select Candy Rewards you want to add": "Selecciona las recompensas de caramelos que quieras añadir",
+	"Mega Energy": "Mega energía",
+	"Candy": "Caramelo",
+	"Delete ALL Invasions?": "¿Borrar TODAS las invasiones?",
+	"This will delete all your Invasions Alarms and cannot be undone": "Esto borrará todas las notificaciones de invasiones y no puede deshacerse",
+	"LURES TRACKED": "CEBOS EN SEGUIMIENTO",
+	"Delete ALL Lures?": "¿Borrar TODOS los cebos?",
+	"This will delete all your Lures Alarms and cannot be undone": "Esto borrará todas las notificaciones de cebos y no puede deshacerse",
+	"NEW LURES ALARM": "NUEVA NOTIFICACIÓN DE CEBOS",
+	"Normal Lure": "Cebo normal",
+	"Glacial Lure": "Cebo glaciar",
+	"Mossy Lure": "Cebo musgoso",
+	"Magnetic Lure": "Cebo magnético",
+	"Rainy Lure": "Cebo lluvioso",
+	"NESTS TRACKED": "NIDOS EN SEGUIMIENTO",
+	"Delete ALL Nests?": "¿Borrar TODOS los nidos?",
+	"This will delete all your Nests Alarms and cannot be undone": "Esto borrará todas las notificaciones de nidos y no puede deshacerse",
+	"Spawns/Hour": "Aparaciones/Hora",
+	"NEW NESTS ALARM": "NUEVA NOTIFICACIÓN DE NIDOS",
+	"Delete tracking for Nests": "Borrar notificación de nidos",
+	"Delete tracking for Invasions": "Borrar notificaciones de invasiones",
+	"This will delete tracking for Nest": "Esto borrará el seguimiento para los nidos de",
+	"This will delete tracking for invasion type": "Esto borrará el seguimiento de invasiones de tipo",
+	"GYMS TRACKED": "GIMNASIOS EN SEGUIMIENTO",
+	"Delete ALL Gyms?": "¿Borrar TODOS los gimnasios?",
+	"This will delete all your Gyms Alarms and cannot be undone": "Esto borrará todas las notificaciones de gimnasios y no puede deshacerse",
+	"NEW GYMS ALARM": "NUEVA NOTIFICACIÓN DE GIMNASIOS",
+	"Harmony": "Armonía",
+	"Mystic": "Sabiduría",
+	"Instinct": "Instinto",
+	"Dashboard": "Panel",
+	"Trackings": "Seguimientos",
+	"Areas & Location": "Áreas y lugares",
+	"Profiles": "Perfiles",
+	"Cleaning": "Limpieza",
+	"SET TO GPS LOCATION": "LOCALIZACIÓN POR GPS",
+	"EDIT": "EDITAR"
 }
