--- a/locales/de.json
+++ b/locales/de.json
@@ -257,7 +257,7 @@
    "Subscription valid until":"Abo gültig bis",
    "Successfully Added Invasion Alarm(s)":"Invasions-Einstellung erfolgreich hinzugefügt",
    "Successfully Added Lure Alarm(s)":"Lockmodul-Einstellung erfolgreich hinzugefügt",
-   "Successfully Added Monster Alarm":"Pokémon-Einstellung erfolgreich gespeichert",
+   "Successfully Added Monster Alarm(s)":"Pokémon-Einstellung erfolgreich gespeichert",
    "Successfully Added Quest Alarm(s)":"Quest-Einstellung erfolgreich gespeichert",
    "Successfully Added Raids Alarm(s)":"Raid- und Ei-Einstellungen erfolgreich gespeichert",
    "Successfully Created Profile":"Profil erfolgreich erstellt",
