--- a/locales/de.json
+++ b/locales/de.json
@@ -117,7 +117,7 @@
    "Enable Telegram Login ?":"Telegram Login aktivieren ?",
    "Enable User List in Admin Tools":"Nutzerliste in Admin Tools aktivieren",
    "Error":"Fehler",
-   "Everything Flag Permissions":"alles Flag Berechtigung",
+   "Everything Flag Permissions":"Alles Flag Berechtigung",
    "everything":"alles",
    "e.g.":"z.B.",
    "fairy":"Fee",
